# knowcodeextra.com

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.toml  generate-certificate.js  marks.txt  todo.md
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: release.yml
deploy/: config.toml  knowcodeextra.service  nginx.conf
docs/plans/: 2026-01-16-deployment-cleanup-design.md  2026-01-16-deployment-cleanup.md  2026-01-17-outreach-tracking-design.md  2026-01-17-outreach-tracking.md  2026-01-17-validation-queue-design.md  2026-01-17-validation-queue.md  2026-01-18-admin-portal-design.md  2026-01-18-admin-portal-implementation.md  2026-01-18-knowcodeextra-backup-design.md  2026-01-18-knowcodeextra-backup-impl.md  2026-01-18-server-side-questions-design.md  2026-01-19-frontend-split-design.md  2026-01-19-frontend-split-implementation.md  2026-01-19-segment-timing-design.md  2026-01-19-segment-timing-implementation.md  2026-01-19-server-side-questions.md  2026-01-19-test-grading-improvements-design.md  2026-01-19-test-grading-improvements-impl.md  2026-01-20-member-features-design.md  (+2 more)
frontend/: admin-attempts.jsx  admin-auth.jsx  admin-layout.jsx  admin-queue.jsx  admin-settings.jsx  admin-tests.jsx  app.jsx  build.sh  index.html  index.jsx  knowcodeextra.jsx  package-lock.json  package.json  react-dom-shim.js  react-shim.js  shared.jsx  tailwind.config.js
src/: admin.rs  certificate.rs  grading.rs  jwt.rs  main.rs  notify.rs  qrz.rs
static/: members.txt  robots.txt  styles.css
